header and css code

--- a/index.html
+++ b/index.html
@@ -2,5 +2,8 @@
 <html>
 <body>
     <h1>Testing github</h1>
+    <header>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates distinctio beatae impedit maiores ut eaque atque facilis quam dolor dolorum odio ducimus, minus praesentium! Architecto voluptas culpa enim ad ipsam?
+    </header>
 </body>
 </html>
